# interview-take-home

./: .env  .gitignore  NOTES.md  README.md  SOLUTION.md  compose.yml  pyproject.toml
db/: generate_seed.py
db/init/: 00_schema.sql  10_seed.sql
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2840_fsm  2841  pg_internal.init
postgres-data/base/5/: 1247  1249  1249_fsm  1255  1255_fsm  1255_vm  1259  1259_vm  16524  16524_fsm  16530  16531  16533  16533_fsm  16540  16541  16543  16543_fsm  16549  16550  16552  16552_fsm  16552_vm  16561  16562  16564  16564_fsm  16564_vm  16576  16577  16579  16586  16587  16587_fsm  16588  16588_fsm  16589  16589_fsm  16601  16601_fsm  (+96 more)
postgres-data/global/: 1260  2396  pg_control  pg_internal 3.init  pg_internal 4.init  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/entity_linking/: db.py  explore.py  linker.py  main.py  normalize.py  normalizer.py  pipeline.py
tests/: test_linker.py  test_linking.py  test_pipeline.py  test_smoke.py
